--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>website 3</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
+	
+
+
 	
 </body>
 </html>
