--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>website 3</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
@@ -17,8 +18,20 @@
 	<script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
-	
-	<button class="btn btn-success" onclick="$(this).hide();">click</button>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-xs-12 bg-warning home-page"></div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 col xs-12 bg-warning about-page">
+				<div class="col-lg-4 col xs-12 bg-warning">1 service</div>
+				<div class="col-lg-4 col xs-12 bg-warning">2 5 stars</div>
+				<div class="col-lg-4 col xs-12 bg-warning">3 quality</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- <button class="btn btn-success" onclick="$(this).hide();">click</button> -->
 
 
 
