--- a/index.html
+++ b/index.html
@@ -19,21 +19,62 @@
 </head>
 <body>
 	<div class="container">
+	<!-- home header -->
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 bg-warning home-page"></div>
 		</div>
+		<div class="row header-bottom bg-success">
+			<div class="col-lg-12 col-xs-12 bg-danger spanbutt">
+				<!-- press and animate scroll to about div -->
+				<span class="down-button">scroll down<br>v</span>
+			</div>		
+		</div>
+	<!-- about page -->
 		<div class="row">
 			<div class="col-lg-12 col xs-12 bg-warning about-page">
 				<div class="col-lg-4 col xs-12 bg-warning">1 service</div>
-				<div class="col-lg-4 col xs-12 bg-warning">2 5 stars</div>
+				<div class="col-lg-4 col xs-12 bg-success">2 5 stars</div>
 				<div class="col-lg-4 col xs-12 bg-warning">3 quality</div>
+				<p class="row about-par">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo tempore, at obcaecati voluptas possimus rem ullam maiores eius, sed autem accusantium quam reiciendis consectetur excepturi mollitia rerum officia earum est?
+				</p>
 			</div>
 		</div>
+	<!-- mid fixed img 2 -->
+		<div class="row">
+			<div class="col-lg-12 col-xs-12 bg-warning fix2"></div>
+		</div>
+	<!-- menu page! -->
+		<div class="row menu-page">
+			<div class="col-lg-4 col-xs-12">
+				<ul>
+					<li>1</li>
+					<li>1</li>
+					<li>1</li>
+				</ul>
+			</div>
+			<div class="col-lg-4 col-xs-12">
+				<ul>
+					<li>2</li>
+					<li>2</li>
+					<li>2</li>
+				</ul>
+			</div>
+			<div class="col-lg-4 col-xs-12 menu-imgs">
+				imageesss
+			</div>
+			<div class="col-lg-4 col-xs-12 menu-img1"></div>
+			<div class="col-lg-4 col-xs-12 menu-img2"></div>
+			<div class="col-lg-4 col-xs-12 menu-img3"></div>
+		</div>
+
+	<!-- mid fixed img 3 -->
+		<div class="row">
+			<div class="col-lg-12 col-xs-12 bg-warning fix3"></div>
+		</div>
+
 	</div>
 
 	<!-- <button class="btn btn-success" onclick="$(this).hide();">click</button> -->
-
-
-
 </body>
 </html>
