--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 </head>
 <body>
 	<div class="container">
+	<!-- navbar -->
+		<div class="row">
+			<nav class="col-lg-12 col-xs-12">
+					<ul>
+						<li>home</li>
+						<li>about</li>
+						<li>menu</li>
+						<li>contact</li>
+					</ul>
+			</nav>
+		</div>
 	<!-- home header -->
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 bg-warning home-page"></div>
@@ -73,6 +84,27 @@
 			<div class="col-lg-12 col-xs-12 bg-warning fix3"></div>
 		</div>
 
+		<!-- contact page -->
+		<div class="row">
+			<div class="col-lg-12 col-xs-12 contact-page">
+				<div class="row">
+					<div class="col-lg-6 col-xs-12">
+						address:
+						<br>
+						hours:
+						<br>
+						email / phone / facebook / instagram
+					</div>
+					<div class="col-lg-6 col-xs-12 map">
+						map
+					</div>
+				</div>
+			</div>
+		</div>
+	<footer>
+		Copyright &copy; 2017
+	</footer>
+<!-- container end -->
 	</div>
 
 	<!-- <button class="btn btn-success" onclick="$(this).hide();">click</button> -->
