--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+	<!-- google fonts yay! -->
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Indie+Flower|La+Belle+Aurore|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -32,7 +33,9 @@
 		</div>
 	<!-- home header -->
 		<div class="row">
-			<div class="col-lg-12 col-xs-12 bg-warning home-page"></div>
+			<div class="col-lg-12 col-xs-12 bg-warning home-page">
+				le petit princesse
+			</div>
 		</div>
 		<div class="row header-bottom bg-success">
 			<div class="col-lg-12 col-xs-12 bg-danger spanbutt">
