--- a/index.html
+++ b/index.html
@@ -37,19 +37,20 @@
 				le petit princesse
 			</div>
 		</div>
-		<div class="row header-bottom bg-success">
-			<div class="col-lg-12 col-xs-12 bg-danger spanbutt">
+		<div class="row header-bottom ">
+			<div class="col-lg-12 col-xs-12  spanbutt">
 				<!-- press and animate scroll to about div -->
 				<span class="down-button">scroll down<br>v</span>
 			</div>		
 		</div>
 	<!-- about page -->
 		<div class="row">
-			<div class="col-lg-12 col xs-12 bg-warning about-page">
-				<div class="col-lg-4 col xs-12 bg-warning">1 service</div>
+			<div class="col-lg-12 col xs-12 about-page">
+				<div class="col-lg-4 col xs-12 bg-danger">1 service</div>
 				<div class="col-lg-4 col xs-12 bg-success">2 5 stars</div>
 				<div class="col-lg-4 col xs-12 bg-warning">3 quality</div>
 				<p class="row about-par">
+					<h2>ABOUT</h2>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo tempore, at obcaecati voluptas possimus rem ullam maiores eius, sed autem accusantium quam reiciendis consectetur excepturi mollitia rerum officia earum est?
 				</p>
 			</div>
@@ -60,6 +61,7 @@
 		</div>
 	<!-- menu page! -->
 		<div class="row menu-page">
+			<h2>MENU</h2>
 			<div class="col-lg-4 col-xs-12">
 				<ul>
 					<li>1</li>
@@ -92,6 +94,7 @@
 			<div class="col-lg-12 col-xs-12 contact-page">
 				<div class="row">
 					<div class="col-lg-6 col-xs-12">
+						<h2>CONTACT</h2>
 						address:
 						<br>
 						hours:
