--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="col-lg-4 col xs-12 bg-success">2 5 stars</div>
 				<div class="col-lg-4 col xs-12 bg-warning">3 quality</div>
 				<p class="row about-par">
-					<h2>ABOUT</h2>
+					<h1 class="titleh">ABOUT</h1>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo tempore, at obcaecati voluptas possimus rem ullam maiores eius, sed autem accusantium quam reiciendis consectetur excepturi mollitia rerum officia earum est?
 				</p>
 			</div>
@@ -61,7 +61,7 @@
 		</div>
 	<!-- menu page! -->
 		<div class="row menu-page">
-			<h2>MENU</h2>
+			<h1 class="titleh">MENU</h1>
 			<div class="col-lg-4 col-xs-12">
 				<ul>
 					<li>1</li>
@@ -94,7 +94,7 @@
 			<div class="col-lg-12 col-xs-12 contact-page">
 				<div class="row">
 					<div class="col-lg-6 col-xs-12">
-						<h2>CONTACT</h2>
+						<h1 class="titleh">CONTACT</h1>
 						address:
 						<br>
 						hours:
@@ -102,7 +102,7 @@
 						email / phone / facebook / instagram
 					</div>
 					<div class="col-lg-6 col-xs-12 map">
-						map
+						google map le petit princesse
 					</div>
 				</div>
 			</div>
