menu before hover effect

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 			<h1 class="titleh">MENU</h1>
 			<div class="col-lg-4 col-xs-12">
 				<ul>
-					<li>1</li>
-					<li>1</li>
-					<li>1</li>
+					<li>Lava Cake</li>
+					<li>Creme Brulee</li>
+					<li>Chocolate Cake</li>
 				</ul>
 			</div>
 			<div class="col-lg-4 col-xs-12">
 				<ul>
-					<li>2</li>
-					<li>2</li>
-					<li>2</li>
+					<li>Fruit Tarte</li>
+					<li>Berry Cheesecake</li>
+					<li>Earl Grey Ice Cream</li>
 				</ul>
 			</div>
 			<div class="col-lg-4 col-xs-12 menu-imgs">
@@ -95,11 +95,16 @@
 				<div class="row">
 					<div class="col-lg-6 col-xs-12">
 						<h1 class="titleh">CONTACT</h1>
-						address:
-						<br>
-						hours:
-						<br>
+						<p>
+						Address: <br>1234 56th Avenue, 1st Floor
+						<br>Somewhere, Over the Rainbow 78910
+						<br><br>
+						Hours: <br>Sunday: Closed <br>
+						Monday - Friday: 8AM - 8PM <br>
+						Saturday: 8AM - 6PM
+						<br><br>
 						email / phone / facebook / instagram
+						</p>
 					</div>
 					<div class="col-lg-6 col-xs-12 map">
 						google map le petit princesse
