--- a/index.html
+++ b/index.html
@@ -45,18 +45,24 @@
 		</div>
 	<!-- about page -->
 		<div class="row">
-			<!-- <div class="col-lg-12 col xs-12 about-page"> -->
-				<div class="col-lg-4 col xs-12 bg-danger about-service">
+				<div class="col-lg-4 col xs-12 about-service">
 					<img src="./img/service_icon.png" alt="" width="200px"> 
-					<br>service
+					<br>Service
 				</div>
-				<div class="col-lg-4 col xs-12 bg-success">2 5 stars</div>
-				<div class="col-lg-4 col xs-12 bg-warning">3 quality</div>
+				<div class="col-lg-4 col xs-12 about-stars">
+					<img src="./img/5stars_icon.png" alt="" width="200px">
+					<br>Stars
+				</div>
+				<div class="col-lg-4 col xs-12  about-quality">
+					<img src="./img/quality_icon.png" alt="" width="200px">
+					<br>Quality
+				</div>
+			<div class="col-lg-12 col xs-12 about-page">
 				<p class="row about-par">
 					<h1 class="titleh">ABOUT</h1>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo tempore, at obcaecati voluptas possimus rem ullam maiores eius, sed autem accusantium quam reiciendis consectetur excepturi mollitia rerum officia earum est?
 				</p>
-			<!-- </div> -->
+			</div>
 		</div>
 	<!-- mid fixed img 2 -->
 		<div class="row">
