adding menu imgs

--- a/index.html
+++ b/index.html
@@ -71,26 +71,29 @@
 	<!-- menu page! -->
 		<div class="row menu-page">
 			<h1 class="titleh">MENU</h1>
-			<div class="col-lg-4 col-xs-12">
+			<div class="col-lg-6 col-xs-12">
 				<ul>
 					<li>Lava Cake</li>
 					<li>Creme Brulee</li>
 					<li>Chocolate Cake</li>
 				</ul>
 			</div>
-			<div class="col-lg-4 col-xs-12">
+			<div class="col-lg-6 col-xs-12">
 				<ul>
 					<li>Fruit Tarte</li>
 					<li>Berry Cheesecake</li>
 					<li>Earl Grey Ice Cream</li>
 				</ul>
 			</div>
-			<div class="col-lg-4 col-xs-12 menu-imgs">
-				imageesss
+			<div class="col-lg-4 col-xs-4 menu-imgs">
+				<img src="./img/sweet7.jpg" alt="" class="img-responsive" height="200px">
 			</div>
-			<div class="col-lg-4 col-xs-12 menu-img1"></div>
-			<div class="col-lg-4 col-xs-12 menu-img2"></div>
-			<div class="col-lg-4 col-xs-12 menu-img3"></div>
+			<div class="col-lg-4 col-xs-4 menu-imgs">
+				<img src="./img/sweet9.jpg" alt="" class="img-responsive">
+			</div>
+			<div class="col-lg-4 col-xs-4 menu-imgs">
+				<img src="./img/sweet6.jpg" alt="" class="img-responsive">
+			</div>
 		</div>
 
 	<!-- mid fixed img 3 -->
