map resize, menu imgs changed

--- a/index.html
+++ b/index.html
@@ -86,13 +86,19 @@
 				</ul>
 			</div>
 			<div class="col-lg-4 col-xs-4 menu-imgs">
-				<img src="./img/sweet7.jpg" alt="" class="img-responsive" height="200px">
+				<div class="row">
+					<img src="./img/sweet10.jpg" alt="" class="img-responsive">
+				</div>
 			</div>
 			<div class="col-lg-4 col-xs-4 menu-imgs">
-				<img src="./img/sweet9.jpg" alt="" class="img-responsive">
+				<div class="row">
+					<img src="./img/sweet7.jpg" alt="" class="img-responsive">
+				</div>
 			</div>
 			<div class="col-lg-4 col-xs-4 menu-imgs">
-				<img src="./img/sweet6.jpg" alt="" class="img-responsive">
+				<div class="row">
+					<img src="./img/sweet9.jpg" alt="" class="img-responsive">
+				</div>	
 			</div>
 		</div>
 
@@ -119,11 +125,12 @@
 						</p>
 					</div>
 					<div class="col-lg-6 col-xs-12 map">
-						google map le petit princesse
+						<!-- google map le petit princesse -->
 					</div>
 				</div>
 			</div>
 		</div>
+
 	<footer>
 		Copyright &copy; 2017
 	</footer>
