--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 	<div class="container">
 	<!-- navbar -->
 		<div class="row">
-			<nav class="col-lg-12 col-xs-12">
+			<nav class="col-lg-12 col-xs-1">
 					<ul>
-						<li>home</li>
-						<li>about</li>
-						<li>menu</li>
-						<li>contact</li>
+						<li class="active"><a href="#">home</a></li>
+						<li><a href="#">about<a></li>
+						<li><a href="#">menu</a></li>
+						<li><a href="#">contact</a></li>
 					</ul>
 			</nav>
 		</div>
